[project]
name = "custom-env-rl"
version = "1.0.0"
description = "a collection of custom env for RL extending from gymnasium and pettingzoo"
authors = [
    {name = "hy"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium (>=1.1.0,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "yfinance (>=0.2.54,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
